<resources>
    <string name="app_name">Exercise1</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="tData">Data Anda</string>
    <string name="temail">Email: </string>
    <string name="tPass">Password: </string>
    <string name="bSignin">Sign In</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txPass">Ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="tvBelum">Belum Terdaftar?</string>
    <string name="btSimpan">Simpan</string>
</resources>